[order service] updated controller api
